# agentlight

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  index.html  package-lock.json  package.json  run-agent-light.bat  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/decisions/: 0001-spec-mode.md
docs/engineering/: api.md  architecture.md  deploy.md  development.md  openapi.yaml  testing.md
docs/operations/: release.md  runbook.md
docs/product/: acceptance-matrix.md  acceptance-standards.md  roadmap.md
docs/specs/: agent-light-mvp.md  esp32-rgb-hardware.md  task.md
firmware/agent_light_esp32_rgb/: README.md  agent_light_esp32_rgb.ino
scripts/: dev-all.mjs  gen-secrets.cmd  generate-pet-frames.mjs  generate-placeholder-assets.mjs  macos-sign-and-dmg.sh  macos-trust-agent-light.sh  run-agent-light.ps1  setup-local-postgres.mjs  win-dev.cmd  win-dev.ps1
server/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  drizzle.config.ts  package.json  tsconfig.json
server/drizzle/: 0000_mysql_initial.sql  0000_spooky_wallow.sql  0001_agent_provider_phone_registration.sql  (+8 more)
src/: ActivationApp.tsx  App.tsx  appView.ts  main.tsx  settings-panel.css  styles.css  tauriClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activation.rs  ai_tools.rs  claude_code.rs  cursor.rs  main.rs  process_util.rs  serial_io.rs  sync.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
(+63 files in other folders)
